compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types-4.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : array boolean of int"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..28): "<root>"@(dummy)
      StmtBody@(src/main.t:0..28): []
        StmtItem@(src/main.t:0..28): ItemId(0)
          ConstVar@(src/main.t:0..28): var "_"@(src/main.t:4..5)
            Array@(src/main.t:8..28): MaybeDyn
              Primitive@(src/main.t:14..21): Boolean
              Primitive@(src/main.t:25..28): Int
