compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types_init_sized-6.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : array char,,char, 1 .. * of int := init(1)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..50): "<root>"@(dummy)
      StmtBody@(src/main.t:0..50): []
        StmtItem@(src/main.t:0..50): ItemId(0)
          ConstVar@(src/main.t:0..50): var "_"@(src/main.t:4..5)
            Array@(src/main.t:8..39): MaybeDyn
              Constrained@(src/main.t:26..32): end => Unsized(Some(1))
                ExprBody@(src/main.t:26..27)
                  Literal@(src/main.t:26..27): Integer(1)
              Primitive@(src/main.t:36..39): Int
            ExprBody@(src/main.t:43..50)
              InitExpr@(src/main.t:43..50)
                ExprBody@(src/main.t:48..49)
                  Literal@(src/main.t:48..49): Integer(1)
error at src/main.t:19..20: unexpected token
| error for src/main.t:19..20: expected type specifier, but found `,`
error at src/main.t:26..32: extra ranges specified
| error for src/main.t:14..24: extra ranges before
| note for src/main.t:26..32: this must be the only range present
| info: `init`-sized arrays must have this range be the only range present
