compiler/toc-hir-lowering/tests/snapshots/lowering__lower_call_stmt-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "1"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..1): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..1): []
        CallStmt@(FileId(1), 0..1): [no params]
          Literal@(FileId(1), 0..1): Integer(1)

