compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_literal-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "const a := 'abcd "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..17): "<root>"@(dummy)
      StmtBody@(src/main.t:0..17): []
        StmtItem@(src/main.t:0..17): ItemId(0)
          ConstVar@(src/main.t:0..17): const "a"@(src/main.t:6..7)
            ExprBody@(src/main.t:11..17)
              Literal@(src/main.t:11..17): CharSeq("abcd ")
error at src/main.t:11..17: invalid char literal
| error for src/main.t:11..17: missing terminator character
